tests/errors/duplicate_pin.nm
component Main {
    pin FOO: input = 1;
    pin FOO: input = 2;
}